--- a/Css/style.css
+++ b/Css/style.css
@@ -8,10 +8,41 @@ body{
 
 }
 
-h1,h2,h3,h4,h5,h6,{
+h1,h2,h3,h4,h5,h6{
     font-family: 'Noto Serif', serif;
 }
 
+
+.hr-style{
+    border: 5px dotted white;
+    border-bottom: none;
+    font-weight: bold;
+    width: 50%;
+
+    
+}
+
+
+.section-title h3{
+    font-weight: bold;
+}
+
+
+.icon-style{
+    background-color: #bb0aac;
+    color: white;
+    font-size: 40px;
+    border: 3px solid;
+    border-radius: 50%;
+    padding: 20px;
+    margin-bottom: 10px;
+    transition: 2s;
+}
+
+
+.icon-style:hover{
+    transform: rotate(360deg);
+}
 
 
 /*----------------------
@@ -23,7 +54,7 @@ header{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 60vh;
 }
 .profile-pic{
     width: 60px;
@@ -62,14 +93,22 @@ header{
     display: flex;
     justify-content: center;
     padding: 10px 0;
+    margin-top: 100px;
 }
 
 .banner-contents p{
     color: whitesmoke;
     font-size: 2.5rem;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 10px;
     border-radius: 20px;
+    transition: 1s;
+}
+
+.banner-contents p:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px #bb0aac;
+    
 }
 
 .fa-youtube{
@@ -85,5 +124,145 @@ header{
 
 
 /*----------------------
-header End
+features Start
+----------------------*/
+#features{
+    padding: 5%;
+    background-color: #e8ded2;
+}
+
+
+.features-col{
+    border: 1px solid #ff02c0;
+    border-radius: 20px;
+    padding: 10px 5px;
+    margin: 20px 0;
+    transition: 0.4s;
+}
+
+
+.features-col:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px black;
+}
+
+
+   
+
+
+
+/*----------------------
+features End
+----------------------*/
+
+
+
+
+
+
+
+
+/*----------------------
+About Me Start
+----------------------*/
+#aboutme{
+    padding: 5%;
+    background-color: #e8d3d2;
+    
+}
+
+.basic-desc{
+    text-align: center;
+    border: 1px solid #ff02c0;
+    border-radius: 20px;
+    padding: 10px 5px;
+    margin: 20px 0;
+    transition: 0.4s;
+}
+
+
+.basic-desc-img{
+    width: 100%;
+    text-align: center;
+    padding: 10px 5px;
+    margin: 20px 0;
+    
+
+    
+}
+
+.basic-desc-img img{
+    width: 150px;
+    width: 150px;
+    padding: 5px;
+    border: 1px solid;
+    margin: 3px 0;
+    border-radius: 20px;
+
+    transition: 0.4s;
+}
+
+.basic-desc-img img:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px black;
+}
+
+.single-img{
+    width: 50%;
+    border: 1px solid;
+    overflow: hidden;
+
+    padding: 5px 10px;
+}
+
+.basic-desc:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px black;
+}
+
+
+.basic-desc p{
+    font-size: 0.9rem;
+    margin-bottom: 0;
+    font-weight: 300;
+    text-align: left;
+}
+
+.basic-desc-photo{
+    width: 80px;
+    height: 80px;
+    border: 3px solid yellowgreen;
+    border-radius: 50%;
+    transition: 1s;
+}
+
+.basic-desc-photo:hover{
+    transform: rotate(360deg);
+}
+
+
+
+.achieve-desc{
+    text-align: center;
+    border: 1px solid #ff02c0;
+    border-radius: 20px;
+    padding: 10px 5px;
+    margin: 20px 0;
+    transition: 0.4s;
+}
+
+
+.achieve-desc:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px black;
+}
+
+
+
+
+
+
+
+/*----------------------
+About Me End
 ----------------------*/
