--- a/Css/style.css
+++ b/Css/style.css
@@ -48,14 +48,7 @@ h1,h2,h3,h4,h5,h6{
 /*----------------------
 header Start
 ----------------------*/
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.300), rgba(0, 0, 0, 0.300)), url("../Photos/pexels-pixabay-163125.jpg");
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60vh;
-}
+
 .profile-pic{
     width: 60px;
     height: 60px;
@@ -76,7 +69,8 @@ header{
 
 
 .brand-name:hover{
-    color: pink;
+    text-shadow: 2px 6px 5px black;
+    
     
     
 }
@@ -111,16 +105,9 @@ header{
     
 }
 
-.fa-youtube{
-    color: red;
-    padding: 5px;
-    
-}
 
-.fa-robot{
-    color: orange;
-    padding: 5px;
-}
+
+
 
 
 /*----------------------
@@ -157,6 +144,29 @@ features End
 
 
 
+/*----------------------
+Slider Start
+----------------------*/
+.carousel-item{
+    max-height: 550px;
+    
+    
+}
+
+.carousel-item{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+/*----------------------
+Slider End
+----------------------*/
+
+
 
 
 
@@ -180,26 +190,19 @@ About Me Start
     transition: 0.4s;
 }
 
-
 .basic-desc-img{
-    width: 100%;
-    text-align: center;
-    padding: 10px 5px;
-    margin: 20px 0;
-    
-
-    
+    background-color: transparent;
+    border: none;
 }
 
 .basic-desc-img img{
-    width: 150px;
-    width: 150px;
-    padding: 5px;
-    border: 1px solid;
-    margin: 3px 0;
+    text-align: center;
+    border: 1px solid #ff02c0;
     border-radius: 20px;
-
+    padding: 10px 5px;
+    margin: 20px 0;
     transition: 0.4s;
+    
 }
 
 .basic-desc-img img:hover{
@@ -266,3 +269,27 @@ About Me Start
 /*----------------------
 About Me End
 ----------------------*/
+
+
+
+
+
+/*----------------------
+Project Start
+----------------------*/
+.single-project{
+    transition: .5s;
+}
+.single-project:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 6px 5px black;
+}
+
+
+
+/*----------------------
+Project End
+----------------------*/
+
+
+
